@@ -9,6 +9,7 @@ BUG: Ticket#169 - Validation of subclass of THtmlArea/TDatePicker fails (Wei)
 BUG: Ticket#179 - CGI incompatibility causing clientscripts.php failure (Qiang)
 BUG: Ticket#181 - Unable to change Content-Type in response header if charset is not set (Qiang)
 BUG: Ticket#200 - onClick javascript event triggered twice on CheckBox label (Qiang)
+BUG: newly created controls during postbacks might get their initial states reset during loadStateRecursive. (Qiang)
 ENH: Ticket#150 - TDataGrid and TDataList now render table section tags (Qiang)
 ENH: Ticket#152 - constituent parts of TWizard are exposed (Qiang)
 ENH: Ticket#184 - added TUserManager.Users and Roles properties (Qiang)
